# auto_drop

./: .gitignore  LICENSE  Makefile  README.md  deploy.sh
.devcontainer/: Dockerfile
src/api/: Makefile  package-lock.json  package.json  webpack.config.js
src/api/src/: index.js
src/cli/: CMakeLists.txt  Makefile  common_cli.cpp  common_cli.h  config_management_cli.cpp  config_management_cli.h  device_config.cpp  device_config.h  loopscheduler.h  main.cpp  redis_config.cpp  redis_config.h  runtime_config.cpp  runtime_config.h  sm_config.cpp  sm_config.h
src/cli/conf/: lua_sample.lua
src/cli/detail/: linuxkeyboard.h
src/conf/: Makefile  lidar_config_sample.ini  nginx.conf  sample_state_lua.lua
src/core/: CMakeLists.txt  main.cpp  runner.cpp  runner.h  sample.yaml  sm_main.cpp  sm_rpc.cpp  sm_rpc.h
src/core/action/: ad_action.cpp  ad_action.h
src/core/conf/: sample.yaml
src/core/rpc_imp_lib/: config_rpc.cpp  config_rpc.h  rpc_wrapper.cpp  rpc_wrapper.h  runner.cpp  runner.h  sion.h  sm_rpc.cpp  sm_rpc.h
src/driver/: CMakeLists.txt  Makefile  mock_driver.cpp
src/driver/lib/: common_driver.cpp  common_driver.h  modbus_driver.cpp  modbus_driver.h
src/driver/rd_driver/: CMakeLists.txt  lp_filter.h  main.cpp  pc_opt.cpp  pc_opt.h  pg.h
src/driver/rd_driver/rs_driver/cmake/: rs_driverConfig.cmake  rs_driverConfigVersion.cmake
src/driver/rd_driver/rs_driver/src/rs_driver/driver/: lidar_driver_impl.hpp
src/driver/tastek/: CMakeLists.txt  main.cpp
src/public/: CMakeLists.txt  Makefile  const_var_define.h  main.cpp  sion.h
src/public/event_sc/: ad_event_sc.cpp  ad_event_sc.h  ad_redis.cpp  ad_redis.h
src/public/hiredis/: hiredis.c  hiredis.h
src/public/pub_node_lib/: websocket-data-sync.js
src/public/utils/: SimpleIni.h  ad_utils.cpp  ad_utils.h
src/rpc/: CMakeLists.txt  Makefile  ad_rpc.cpp  ad_rpc.h  idl.thrift  rpc_wrapper.cpp  rpc_wrapper.h
src/single_ui/: .env.production  Makefile  README.md  package-lock.json  package.json  vue.config.js
src/single_ui/src/: App.vue  main.js
src/single_ui/src/components/: Control.vue  FlvPlayer.vue  PcdShow.vue  State.vue
src/single_ui/src/lib/: request.js
src/sm/: CMakeLists.txt  main.cpp
src/sm/conf/: sm_test.yaml
src/sm/lib/: sm.cpp  sm.h
src/tools/: cp_ply.sh  date_match.sh  get_statistic.sh  rt.sh
